--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -411,16 +411,6 @@
         <property name="bottomMargin">
          <number>0</number>
         </property>
-        <item row="0" column="1">
-         <widget class="QSpinBox" name="interceptsNumberSpinBox">
-          <property name="minimum">
-           <number>1</number>
-          </property>
-          <property name="value">
-           <number>5</number>
-          </property>
-         </widget>
-        </item>
         <item row="0" column="0" rowspan="5">
          <widget class="QImageInteractiveDrawer" name="analysisInteracter" native="true">
           <property name="sizePolicy">
@@ -431,15 +421,14 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="2">
-         <widget class="QPushButton" name="interceptsNumberChangeButton">
-          <property name="text">
-           <string>Change Intercepts Number</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1" colspan="2">
          <widget class="QTableView" name="analysisTableView">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>10</verstretch>
+           </sizepolicy>
+          </property>
           <property name="selectionBehavior">
            <enum>QAbstractItemView::SelectRows</enum>
           </property>
