--- a/gui/parametersdialog.ui
+++ b/gui/parametersdialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>270</width>
-    <height>213</height>
+    <height>226</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -78,7 +78,7 @@
       </sizepolicy>
      </property>
      <property name="text">
-      <string>Max Sigma Color</string>
+      <string>Max Sigma Colour</string>
      </property>
     </widget>
    </item>
