--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -426,7 +426,7 @@
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>0</horstretch>
-            <verstretch>10</verstretch>
+            <verstretch>2</verstretch>
            </sizepolicy>
           </property>
           <property name="selectionBehavior">
@@ -461,6 +461,12 @@
         </item>
         <item row="2" column="1" colspan="2">
          <widget class="QLabel" name="analysisCurrentClassLabel">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>1</verstretch>
+           </sizepolicy>
+          </property>
           <property name="text">
            <string/>
           </property>
