--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>662</width>
-    <height>620</height>
+    <width>658</width>
+    <height>616</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -52,16 +52,7 @@
         <string>Raw</string>
        </attribute>
        <layout class="QHBoxLayout" name="horizontalLayout_2">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item>
@@ -81,16 +72,7 @@
         <string>Crop and Calibre</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_3">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item row="2" column="1" rowspan="3">
@@ -251,16 +233,7 @@
         <string>Process</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item row="0" column="2" alignment="Qt::AlignTop">
@@ -399,16 +372,7 @@
         <string>Analysis</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_2">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item row="0" column="0" rowspan="5">
@@ -481,21 +445,12 @@
         </item>
        </layout>
       </widget>
-      <widget class="QWidget" name="infoTab">
+      <widget class="QWidget" name="reportTab">
        <attribute name="title">
-        <string>Information</string>
+        <string>Report</string>
        </attribute>
        <layout class="QGridLayout" name="gridLayout_4">
-        <property name="leftMargin">
-         <number>0</number>
-        </property>
-        <property name="topMargin">
-         <number>0</number>
-        </property>
-        <property name="rightMargin">
-         <number>0</number>
-        </property>
-        <property name="bottomMargin">
+        <property name="margin">
          <number>0</number>
         </property>
         <item row="0" column="4">
@@ -528,7 +483,7 @@
          </widget>
         </item>
         <item row="0" column="0" rowspan="2">
-         <widget class="QTextBrowser" name="infoTextBrowser">
+         <widget class="QTextBrowser" name="reportTextBrowser">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
             <horstretch>5</horstretch>
@@ -570,7 +525,7 @@
          </spacer>
         </item>
         <item row="1" column="3" colspan="4">
-         <widget class="QCustomPlot" name="infoPlotter" native="true">
+         <widget class="QCustomPlot" name="diameterBarPlotter" native="true">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
             <horstretch>2</horstretch>
@@ -590,8 +545,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>662</width>
-     <height>21</height>
+     <width>658</width>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuProject">
@@ -803,7 +758,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>Export Image Information As</string>
+    <string>Export Report as</string>
    </property>
    <property name="toolTip">
     <string>Export Report as File (Ctrl+E)</string>
@@ -822,7 +777,7 @@
     </iconset>
    </property>
    <property name="text">
-    <string>Quick Export As PDF</string>
+    <string>Quick Export as PDF</string>
    </property>
    <property name="toolTip">
     <string>Export Report as PDF with the Image's Filename (Ctrl+Shift+E)</string>
