--- a/gui/mainwindow.ui
+++ b/gui/mainwindow.ui
@@ -131,8 +131,37 @@
           </property>
          </widget>
         </item>
-        <item row="0" column="1" alignment="Qt::AlignTop">
+        <item row="6" column="1" alignment="Qt::AlignBottom">
+         <widget class="QLabel" name="gaugeResultLabel">
+          <property name="text">
+           <string/>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignCenter</set>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="1">
+         <spacer name="ccVerticalSpacer_2">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="0" column="1" rowspan="2">
          <widget class="QGroupBox" name="ccModeGroupBox">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+            <horstretch>0</horstretch>
+            <verstretch>10</verstretch>
+           </sizepolicy>
+          </property>
           <property name="title">
            <string>Operation Mode</string>
           </property>
@@ -215,29 +244,6 @@
            </item>
           </layout>
          </widget>
-        </item>
-        <item row="6" column="1" alignment="Qt::AlignBottom">
-         <widget class="QLabel" name="gaugeResultLabel">
-          <property name="text">
-           <string/>
-          </property>
-          <property name="alignment">
-           <set>Qt::AlignCenter</set>
-          </property>
-         </widget>
-        </item>
-        <item row="5" column="1">
-         <spacer name="ccVerticalSpacer_2">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </widget>
